BE: add auth/profile endpoint; fix cors security configuration; fix generate JWT token in registration endpoint
